# cpp-cmake-shared-lib-template

./: .editorconfig  .travis.yml  CMakeLists.txt  README.md  travis.sh
.circleci/: config.yml  test.sh
